# GraphLib

./: .codedocs  .gitignore  .travis.yml  BFS_8hpp.html  BFS_8hpp_source.html  CMakeLists.txt  Color_8hpp.html  Color_8hpp.js  Color_8hpp_source.html  CompileLatex_8hpp.html  CompileLatex_8hpp.js  CompileLatex_8hpp_source.html  DFS_8hpp.html  DFS_8hpp.js  DFS_8hpp_source.html  DegreeSequence_8hpp.html  DegreeSequence_8hpp.js  DegreeSequence_8hpp_source.html  Degrees_8hpp.html  Degrees_8hpp.js  Degrees_8hpp_source.html  Dijkstra_8hpp.html  Dijkstra_8hpp_source.html  DisjointSets_8hpp.html  DisjointSets_8hpp_source.html  Distance_8hpp.html  Distance_8hpp_source.html  Edge_8hpp.html  Edge_8hpp_source.html  EntitySelector_8hpp.html  EntitySelector_8hpp.js  EntitySelector_8hpp_source.html  FloydWarshall_8hpp.html  FloydWarshall_8hpp_source.html  Graph_8hpp.html  Graph_8hpp_source.html  HavelHakimi_8hpp.html  HavelHakimi_8hpp.js  HavelHakimi_8hpp_source.html  Kruskal_8hpp.html  (+193 more)
cmake_modules/: FindMathGL.cmake  RegexUtils.cmake
doc/: CMakeLists.txt  Doxyfile.in  install_doxygen.sh
examples/: CMakeLists.txt  ColoredDijkstraKruskal.cpp  MathGL.cpp  MathGLColors.cpp  MathGLPlacing.cpp  SwitzerlandDijkstra.cpp  YAMLReader.cpp
examples/input/: switzerland.yml
graphlib/: CMakeLists.txt  algorithms  external  gl  interface  io  structures
graphlib/src/: gl_assert.hpp  gl_base.hpp  partial_specialization_off  partial_specialization_on
graphlib/src/algorithms/: BFS.hpp  DFS.hpp  DegreeSequence.hpp  Degrees.hpp  Dijkstra.hpp  FloydWarshall.hpp  HavelHakimi.hpp  Kruskal.hpp  LaplacianEigen.hpp  LaplacianEigenDense.hpp  LaplacianEigenSparse.hpp  LaplacianSTL.hpp  PositionsFromLaplacian.hpp  SpectralPlacing.hpp  SpectralPlacingDense.hpp  SpectralPlacingSparse.hpp  TransitiveClosure.hpp
graphlib/src/interface/: EntitySelector.hpp  UpdateFlaggedEntities.hpp
graphlib/src/io/: CompileLatex.hpp  General.hpp  PrintContainer.hpp  ReadYAML.hpp  StreamOverload.hpp  WriteImage.hpp  WriteTikz.hpp  YAMLReader.hpp
graphlib/src/structures/: Color.hpp  DisjointSets.hpp  Distance.hpp  Edge.hpp  Graph.hpp  ListGraph.hpp  MatrixGraph.hpp  Node.hpp  Property.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_10.js  files_2.js  files_3.js  (+61 more)
src/: CMakeLists.txt
src/AdjacencyList/: CMakeLists.txt
src/AdjacencyMatrix/: CMakeLists.txt
src/algorithms/: TransitiveClosure.hpp
src/io/: WriteImage.hpp  WriteTikz.hpp
src/structure/: AdjacencyList.hpp  AdjacencyMatrix.hpp  AdjacencyMatrix_main.cpp
src/structures/: AdjacencyList.hpp  AdjacencyMatrix.hpp  CMakeLists.txt  Graph.hpp  ListGraph.hpp  MatrixGraph.hpp
test/: CMakeLists.txt  Input_Dijkstra9  Input_edges  Input_graph10  Input_random20  Input_tree12  Input_writeEdges.py  Test_Centrality.cpp  Test_Color.cpp  Test_ConstructFromDegSeq.cpp  Test_Conversion.cpp  Test_CycleDetection.cpp  Test_DegreeSequence.cpp  Test_Dijkstra.cpp  Test_DisjointSets.cpp  Test_Edge.cpp  Test_FloydWarshall.cpp  Test_GraphBase.cpp  Test_GraphConstructor.cpp  Test_GraphInterface.cpp  Test_GraphicSequence.cpp  Test_IOTikz.cpp  Test_Kruskal.cpp  Test_Laplacian.cpp  Test_ListGraph.cpp  Test_MathGL.cpp  Test_MathGLColors.cpp  Test_MathGLPlacing.cpp  Test_MatrixGraph.cpp  Test_Node.cpp  Test_PrintContainer.cpp  Test_Property.cpp  Test_ReadYAML.cpp  Test_StreamOverload.cpp  Test_SwitzerlandDijkstra.cpp  Test_TransitiveClosure.cpp  Test_Traversal.cpp  Test_UpdateFlaggedEntities.cpp  dijkstra9_positions  gl_test.hpp  (+3 more)
test/algorithms/: CMakeLists.txt  Test_TransitiveClosure.cpp  testGraph.txt
test/input/: dijkstra9.yml  dijkstra9_positions  graph10_positions  graph8  sample_matrix  singleEdge  switzerland.yml  tree12
test/io/: CMakeLists.txt  Test_IOTikz.cpp  Test_MathGL.cpp  WriteEdges.py  singleInput.txt
test/structures/: CMakeLists.txt  Test_ListGraph.cpp  Test_MatrixGraph.cpp  Test_conversion.cpp
